--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissors</title>
+    <script src="./scripts/script.js" defer></script>
 </head>
 <body>
-    <script src="./scripts/script.js">
-        
-    </script>
+    <h1>Rock Paper Scissors</h1>
+
+    <div id="buttons">
+        <button data-choice="rock">Rock</button>
+        <button data-choice="paper">Paper</button>
+        <button data-choice="scissors">Scissors</button>
+    </div>
+
+    <div id="results"></div>
+    <div id="score">Player: 0 | Computer: 0</div>
 </body>
 </html>
